--- a/content/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.ipynb
+++ b/content/training/pyaerocom/jgliss_intro_model_evaluation_pyaerocom.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-26T08:47:11.404789Z",
@@ -69,10 +69,10 @@
     {
      "data": {
       "text/plain": [
-       "'0.8.1.dev2'"
+       "'0.8.1.dev3'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
     }
    },
    "source": [
-    "Please make sure to use version **0.8.1.dev2**. If you have an earlier version, follow [these instructions](https://github.com/NordicESMhub/NEGI-Abisko-2019/blob/master/content/training/pyaerocom/local_pyaerocom.md) in order to update your installation."
+    "Please make sure to use version **0.8.1.dev2** (or later). If you have an earlier version, follow [these instructions](https://github.com/NordicESMhub/NEGI-Abisko-2019/blob/master/content/training/pyaerocom/local_pyaerocom.md) in order to update your installation."
    ]
   },
   {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-26T08:47:12.749509Z",
@@ -154,7 +154,7 @@
        "'/home/notebook/shared-ns1000k/inputs/pyaerocom-testdata/'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
       "Data ID: TM5_AP3-CTRL2019\n",
-      "Data directory: /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//modeldata/TM5_AP3-CTRL2019/renamed\n",
+      "Data directory: /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata/modeldata/TM5_AP3-CTRL2019/renamed\n",
       "Available experiments: ['AP3-CTRL2019']\n",
       "Available years: [2010]\n",
       "Available frequencies ['monthly']\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-26T08:47:16.422974Z",
@@ -260,7 +260,7 @@
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
       "Data ID: TM5_AP3-CTRL2019\n",
-      "Data directory: /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//modeldata/TM5_AP3-CTRL2019/renamed\n",
+      "Data directory: /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata/modeldata/TM5_AP3-CTRL2019/renamed\n",
       "Available experiments: ['AP3-CTRL2019']\n",
       "Available years: [2010]\n",
       "Available frequencies ['monthly']\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -300,7 +300,7 @@
        "standard_name: atmosphere_optical_thickness_due_to_ambient_aerosol_particles; Unit: 1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-10-26T08:47:24.092223Z",
@@ -428,7 +428,7 @@
        "pyaerocom.griddeddata.GriddedData"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -464,7 +464,7 @@
        "'monthly'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -540,7 +540,7 @@
        "iris.cube.Cube"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -609,7 +609,7 @@
        "      margin-top: 7px;\n",
        "  }\n",
        "</style>\n",
-       "<table class=\"iris\" id=\"139741938838440\">\n",
+       "<table class=\"iris\" id=\"140637909539472\">\n",
        "    <tr class=\"iris\">\n",
        "<th class=\"iris iris-word-cell\">Atmosphere Optical Thickness Due To Ambient Aerosol (1)</th>\n",
        "<th class=\"iris iris-word-cell\">time</th>\n",
@@ -678,7 +678,7 @@
        "</tr>\n",
        "<tr class=\"iris\">\n",
        "    <td class=\"iris-word-cell iris-subheading-cell\">\tfrom_files</td>\n",
-       "    <td class=\"iris-word-cell\" colspan=\"3\">['/home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//modeldata/T...</td>\n",
+       "    <td class=\"iris-word-cell\" colspan=\"3\">['/home/notebook/shared-ns1000k/inputs/pyaerocom-testdata/modeldata/TM...</td>\n",
        "</tr>\n",
        "<tr class=\"iris\">\n",
        "    <td class=\"iris-word-cell iris-subheading-cell\">\tinstitute_id</td>\n",
@@ -753,7 +753,7 @@
        "<iris 'Cube' of atmosphere_optical_thickness_due_to_ambient_aerosol / (1) (time: 12; latitude: 90; longitude: 120)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -804,7 +804,7 @@
        "    cell_methods:      longitude: latitude: point time: mean"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -872,7 +872,7 @@
        "Grid data: <iris 'Cube' of atmosphere_optical_thickness_due_to_ambient_aerosol / (1) (time: 12)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -978,15 +978,12 @@
       "Data directory: /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//obsdata/AeronetSunV3Lev2.0.daily/renamed\n",
       "Supported variables: ['od340aer', 'od440aer', 'od500aer', 'od870aer', 'ang4487aer', 'ang4487aer_calc', 'od550aer']\n",
       "Last revision: 20190920\n",
-      "Reading failed for AeronetSunV3Lev2.AP. Error: OSError('Data directory /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//obsdata/AeronetSunV3Lev2.0.AP/renamed of observation network AeronetSunV3Lev2.AP does not exists')\n",
       "\n",
       "Dataset name: AeronetSDAV3Lev2.daily\n",
       "Data directory: /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//obsdata/Aeronet.SDA.V3L2.0.daily/renamed\n",
       "Supported variables: ['od500gt1aer', 'od500lt1aer', 'od500aer', 'ang4487aer', 'od550aer', 'od550gt1aer', 'od550lt1aer']\n",
       "Last revision: 20190920\n",
-      "Reading failed for AeronetSDAV3Lev2.AP. Error: NetworkNotImplemented('No reading class available yet for dataset AeronetSDAV3Lev2.AP')\n",
-      "Reading failed for AeronetInvV3Lev2.daily. Error: OSError('Data directory /home/notebook/shared-ns1000k/inputs/pyaerocom-testdata//obsdata/Aeronet.Inv.V3L2.0.daily/renamed of observation network AeronetInvV3Lev2.daily does not exists')\n",
-      "Reading failed for AeronetSunV3Lev2.0.daily. Error: AttributeError(\"'NoneType' object has no attribute 'experiment'\")\n"
+      "Reading failed for AeronetSDAV3Lev2.AP. Error: NetworkNotImplemented('No reading class available yet for dataset AeronetSDAV3Lev2.AP')\n"
      ]
     }
    ],
@@ -996,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1009,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1046,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1057,25 +1054,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 1-124 of 1230 (ReadAeronetSunV3) | 16:37:09 (delta = 0 s')\n",
+      "Reading files 1-124 of 1230 (ReadAeronetSunV3) | 23:19:40 (delta = 0 s')\n",
       "Reading file 0 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 124-247 of 1230 (ReadAeronetSunV3) | 16:37:12 (delta = 3 s')\n",
+      "Reading files 124-247 of 1230 (ReadAeronetSunV3) | 23:19:44 (delta = 3 s')\n",
       "Reading file 123 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 247-370 of 1230 (ReadAeronetSunV3) | 16:37:16 (delta = 3 s')\n",
+      "Reading files 247-370 of 1230 (ReadAeronetSunV3) | 23:19:48 (delta = 3 s')\n",
       "Reading file 246 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 370-493 of 1230 (ReadAeronetSunV3) | 16:37:18 (delta = 2 s')\n",
+      "Reading files 370-493 of 1230 (ReadAeronetSunV3) | 23:19:50 (delta = 2 s')\n",
       "Reading file 369 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 493-616 of 1230 (ReadAeronetSunV3) | 16:37:23 (delta = 4 s')\n",
+      "Reading files 493-616 of 1230 (ReadAeronetSunV3) | 23:19:54 (delta = 4 s')\n",
       "Reading file 492 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 616-739 of 1230 (ReadAeronetSunV3) | 16:37:28 (delta = 5 s')\n",
+      "Reading files 616-739 of 1230 (ReadAeronetSunV3) | 23:19:59 (delta = 4 s')\n",
       "Reading file 615 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 739-862 of 1230 (ReadAeronetSunV3) | 16:37:34 (delta = 5 s')\n",
+      "Reading files 739-862 of 1230 (ReadAeronetSunV3) | 23:20:04 (delta = 4 s')\n",
       "Reading file 738 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 862-985 of 1230 (ReadAeronetSunV3) | 16:37:38 (delta = 4 s')\n",
+      "Reading files 862-985 of 1230 (ReadAeronetSunV3) | 23:20:08 (delta = 3 s')\n",
       "Reading file 861 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 985-1108 of 1230 (ReadAeronetSunV3) | 16:37:44 (delta = 5 s')\n",
+      "Reading files 985-1108 of 1230 (ReadAeronetSunV3) | 23:20:13 (delta = 4 s')\n",
       "Reading file 984 of 1230 (ReadAeronetSunV3)\n",
-      "Reading files 1108-1231 of 1230 (ReadAeronetSunV3) | 16:37:50 (delta = 6 s')\n",
+      "Reading files 1108-1231 of 1230 (ReadAeronetSunV3) | 23:20:19 (delta = 6 s')\n",
       "Reading file 1107 of 1230 (ReadAeronetSunV3)\n"
      ]
     },
@@ -1085,7 +1082,7 @@
        "UngriddedData <networks: ['AeronetSunV3Lev2.daily']; vars: ['od550aer']; instruments: ['sun_photometer'];No. of stations: 1230"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
