mod masked_average

--- a/content/training/Example_model_global_arctic_average.ipynb
+++ b/content/training/Example_model_global_arctic_average.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example focuses on area weights (weighting by the area of the grid cell), but is generalizable.  "
+    "This example focuses on area weights (weighting by the area of the grid cell), but is generalizable."
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "## Get the area weigts:\n",
-    "For the CMIP data, each model has a file for the area of each grid cell. The variable name of this is 'areacella'. We load the NorESM one. "
+    "For the CMIP data, each model has a file for the area of each grid cell. The variable name of this is 'areacella'. We load the NorESM one."
    ]
   },
   {
@@ -60,39 +60,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def masked_average(xa, dim=None, weights=None, mask=None):\n",
+    "def masked_average(xa:xr.DataArray,\n",
+    "                   dim=None,\n",
+    "                   weights:xr.DataArray=None,\n",
+    "                   mask:xr.DataArray=None):\n",
     "    \"\"\"\n",
-    "    This function will average \n",
+    "    This function will average\n",
     "    :param xa: dataArray\n",
     "    :param dim: dimension or list of dimensions. e.g. 'lat' or ['lat','lon','time']\n",
     "    :param weights: weights (as xarray)\n",
     "    :param mask: mask (as xarray), True where values to be masked.\n",
     "    :return: masked average xarray\n",
     "    \"\"\"\n",
-    "    xa_ = xa.copy()\n",
+    "    #lest make a copy of the xa\n",
+    "    xa_copy:xr.DataArray = xa.copy()\n",
+    "\n",
     "    if mask is not None:\n",
-    "        dum, mask_alld = xr.broadcast(xa, mask) # broadcast to all dims\n",
-    "        xa_ = xa_.where(np.logical_not(mask))\n",
-    "        if weights is not None:\n",
-    "            dum, weights_alld = xr.broadcast(xa, weights) # broadcast to all dims\n",
-    "            weights_alld = weights_alld.where(np.logical_not(mask_alld))\n",
-    "            return (xa_*weights_alld).sum(dim=dim)/weights_alld.where(xa_.notnull()).sum(dim=dim)\n",
-    "        else:\n",
-    "            return xa_.mean(dim)\n",
+    "        xa_weighted_average = __weighted_average_with_mask(\n",
+    "            dim, mask, weights, xa, xa_copy\n",
+    "        )\n",
     "    elif weights is not None:\n",
-    "        dum, weights_alld = xr.broadcast(xa, weights) # broadcast to all dims\n",
-    "        return (xa_*weights_alld).sum(dim)/weights_alld.where(xa_.notnull()).sum(dim=dim)\n",
+    "        xa_weighted_average = __weighted_average(\n",
+    "            dim, weights, xa, xa_copy\n",
+    "        )\n",
     "    else:\n",
-    "        return xa.mean(dim)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Application 1: Weigted global average:\n",
-    "Grid cells have different area, so when we do the global average, they have to be weigted by the area of each grid cell. \n",
-    "Here we do it for 2 m temperature:"
+    "        xa_weighted_average =  xa.mean(dim)\n",
+    "\n",
+    "    return xa_weighted_average\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # %% [markdown]\n",
+    "\n",
+    "\n",
+    "def __weighted_average(dim, weights, xa, xa_copy):\n",
+    "    '''helper function for masked_average'''\n",
+    "    _, weights_all_dims = xr.broadcast(xa, weights)  # broadcast to all dims\n",
+    "    x_times_w = xa_copy * weights_all_dims\n",
+    "    xw_sum = x_times_w.sum(dim)\n",
+    "    x_tot = weights_all_dims.where(xa_copy.notnull()).sum(dim=dim)\n",
+    "    xa_weighted_average = xw_sum / x_tot\n",
+    "    return xa_weighted_average\n",
+    "\n",
+    "\n",
+    "def __weighted_average_with_mask(dim, mask, weights, xa, xa_copy):\n",
+    "    '''helper function for masked_average'''\n",
+    "    _, mask_all_dims = xr.broadcast(xa, mask)  # broadcast to all dims\n",
+    "    xa_copy = xa_copy.where(np.logical_not(mask))\n",
+    "    if weights is not None:\n",
+    "        _, weights_all_dims = xr.broadcast(xa, weights)  # broadcast to all dims\n",
+    "        weights_all_dims = weights_all_dims.where(~mask_all_dims)\n",
+    "        x_times_w = xa_copy * weights_all_dims\n",
+    "        xw_sum = x_times_w.sum(dim=dim)\n",
+    "        x_tot = weights_all_dims.where(xa_copy.notnull()).sum(dim=dim)\n",
+    "        xa_weighted_average = xw_sum / x_tot\n",
+    "    else:\n",
+    "        xa_weighted_average = xa_copy.mean(dim)\n",
+    "    return xa_weighted_average\n",
+    "\n",
+    "\n",
+    "# ## Application 1: Weigted global average:\n",
+    "# Grid cells have different area, so when we do the global average, they have to be weigted by the area of each grid cell.\n",
+    "# Here we do it for 2 m temperature:"
    ]
   },
   {
@@ -103,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa5b815ee80>]"
+       "[<matplotlib.lines.Line2D at 0x7f6e0df10d30>]"
       ]
      },
      "execution_count": 4,
@@ -140,12 +169,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 3
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa5b50a2400>]"
+       "[<matplotlib.lines.Line2D at 0x7f6e09c53470>]"
       ]
      },
      "execution_count": 5,
@@ -172,9 +203,19 @@
     "glob_mean = masked_average(tas_ds['tas'], dim=['lat','lon'], weights=aw_xr, mask=mask)\n",
     "glob_mean.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
