--- a/content/training/Example_compute_concentrations/Startpoint_compare_model_oa_to_obs.ipynb
+++ b/content/training/Example_compute_concentrations/Startpoint_compare_model_oa_to_obs.ipynb
@@ -5,6 +5,10 @@
    "metadata": {},
    "source": [
     "# Startpoint compare concoa to observations. \n",
+    "**OBS**: this assumes the surface pressure is good enough as an approximation for the bottom layer in the model. This could of cource be questioned (but for comparison with observations I think it makes a lot of sense). \n",
+    "\n",
+    "**OBS2**: There is no guaranty this will work with all models as it requires that they already have variables ps, tas and whatever mmr variable you want. \n",
+    "\n",
     "**To run this script:**\n",
     "First run [create_concoa.ipynb](create_concoa.ipynb) to compute concoa. The module 'read_CMIP.py' should be in the same folder as this notebook.\n",
     "This field is calculated assuming surface pressure and temperature is good enough for the values in the gridbox.\n",
@@ -484,7 +488,7 @@
     }
    ],
    "source": [
-    "obsdata = pya.io.ReadUngridded().read('EBASMC',vars_to_retrieve='concoa', lat_range=[60, 90]) # choose stations above 60 degrees"
+    "obsdata = pya.io.ReadUngridded().read('EBASMC',vars_to_retrieve=concoa, lat_range=[60, 90]) # choose stations above 60 degrees"
    ]
   },
   {
@@ -523,7 +527,7 @@
     }
    ],
    "source": [
-    "obsdata.plot_station_coordinates(var_name='concoa')#, start=2010, markersize=50);"
+    "obsdata.plot_station_coordinates(var_name=concoa)#, start=2010, markersize=50);\n"
    ]
   },
   {
@@ -579,8 +583,8 @@
    ],
    "source": [
     "station = obsdata.to_station_data('Kårvatn')\n",
-    "ax = station.plot_timeseries('concoa')\n",
-    "ax = station.plot_timeseries('concoa', freq='monthly', lw=4, ax=ax)"
+    "ax = station.plot_timeseries(concoa)\n",
+    "ax = station.plot_timeseries(concoa, freq='monthly', lw=4, ax=ax)"
    ]
   },
   {
