--- a/content/training/Example_compute_concentrations/create_concoa.ipynb
+++ b/content/training/Example_compute_concentrations/create_concoa.ipynb
@@ -12,6 +12,12 @@
    "metadata": {},
    "source": [
     "# Startpoint compare concoa to observations. \n",
+    "**OBS**: this assumes the surface pressure is good enough as an approximation for the bottom layer in the model. This could of cource be questioned (but for comparison with observations I think it makes a lot of sense). \n",
+    "\n",
+    "**OBS2**: There is no guaranty this will work with all models as it requires that they already have variables ps, tas and whatever mmr variable you want. In addition there might be unknowns in the file format.\n",
+    "\n",
+    "\n",
+    "\n",
     "This notebook calculates nconcoa ($\\mu g/m^3$) from the mass mixing ratios in NorESM/UKESM. \n",
     "The cmip6 data is in mass mixing ratio (mmroa) kg/kg. The aerocom variable is in $\\mu g/m3$.\n",
     "\n",
@@ -507,8 +513,8 @@
     "    R = 287.058\n",
     "    kg2ug = 1e3*1e6\n",
     "    ds_mmroa['rho_a'] = ds_ps['ps']/(R*ds_tas['tas'])\n",
-    "    ds_mmroa['concoa'] = ds_mmroa['mmroa']*ds_mmroa['rho_a']*kg2ug\n",
-    "    ds_mmroa['concoa'].attrs['units']='ug m-3'\n",
+    "    ds_mmroa[concoa] = ds_mmroa[mmroa]*ds_mmroa['rho_a']*kg2ug\n",
+    "    ds_mmroa[concoa].attrs['units']='ug m-3'\n",
     "    return ds_mmroa\n",
     "def convert_mmroa2concoa_surf_and_save(ds_mmroa, ds_tas, ds_ps, savepath):\n",
     "    ds = convert_mmroa_to_concoa_surface(ds_mmroa, ds_tas, ds_ps)\n",
