--- a/content/topics/group-2/reports/Goutam_Choudhury_report/NeGIcourse_2019_Goutam_Choudhury.ipynb
+++ b/content/topics/group-2/reports/Goutam_Choudhury_report/NeGIcourse_2019_Goutam_Choudhury.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "<p style='text-align: center;'> <font size='5;'> <b>Comparison of modelled aerosol extinction profiles from the AeroCom 2019 project and CALIOP observations over the Arctic <b> </font> </p>         "
+    "<p style='text-align: center;'> <font size='5;'> <b>Comparison of modeled aerosol extinction profiles from the AeroCom 2019 project and CALIOP observations over the Arctic <b> </font> </p>         "
    ]
   },
   {
@@ -17,11 +17,13 @@
    "source": [
     " <p style='text-align: center;'> <font size = '3;' >  <b> Goutam Choudhury </b> </font> <br> <font size = '2.5;' >goutam.choudhury@uni-leipzig.de <br> Group Assistants: Paul Glantz, Jonas Gliss and Ksenia Tabakova <br> </font>  </p>\n",
     " \n",
+    " <br> <br>\n",
+    " \n",
     " <center> <img src=\"https://www.aces.su.se/aces/wp-content/uploads/2019/05/Zeppelin-850x478.jpg\" alt=\"drawing\" width=\"700\"/>\n",
     "\n",
     "<br> <br> <p style='text-align: center;'> <font size = '2.5;' >   Report for the course </font>  <br> <font size = '3.0;' ><em> Climate science at high latitudes: eScience for linking Arctic measurements and modeling </em></font> </p>\n",
     "    \n",
-    "<br> <p style='text-align: center;'> <font size = '3.0;' > Leipzig Institute for Meteorology <br> University of Leipzig <br> <br>  November 1, 2019</font> </p>"
+    "<br> <p style='text-align: center;'> <font size = '3.0;' > Leipzig Institute for Meteorology <br> University of Leipzig <br> <br>  November 1, 2019</font> </p> <br> <br>"
    ]
   },
   {
@@ -35,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='text-align: justify;'> The profiles of aerosol extinction coefficient simulated by two models during the AeroCom 2019 project  is compared with the CALIOP (Cloud-Aerosol Lidar with Orthogonal Polarization) retrievals for the Arctic region. The models considered for this study are Geophysical Fluid Dynamics Laboratory (GFDL) and Spectral Radiation-Transport Model for Aerosol Species (SPRINTARS). Monthly averaged globally gridded model and satellite data are considered for this purpose for the year 2010 over the Arctic region. The seasonal variation of the mean extinction height diagnostics ($Z_\\alpha$) is studied for the CALIOP and model data for altitudes up to 10 km. The models are found to overestimate the $Z_\\alpha$ values in annual and seasonal scales. However, the seasonal variation shown by models is at par with the CALIOP retrievals.</p>   "
+    "<p style='text-align: justify;'> The profiles of aerosol extinction coefficient simulated by two models during the AeroCom 2019 project  is compared with the CALIOP (Cloud-Aerosol Lidar with Orthogonal Polarization) retrievals for the Arctic region. The models considered for this study are Geophysical Fluid Dynamics Laboratory (GFDL) and Spectral Radiation-Transport Model for Aerosol Species (SPRINTARS). Monthly averaged globally gridded model and satellite data are considered for this purpose for the year 2010 over the Arctic region. The seasonal variation of the mean extinction height diagnostics ($Z_\\alpha$) is studied for the CALIOP and model data for altitudes up to 10 km. The models are found to overestimate the $Z_\\alpha$ values in annual and seasonal scales. However, the seasonal variation shown by models is at par with the CALIOP retrievals.</p>   <br> <br> "
    ]
   },
   {
@@ -49,9 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='text-align: justify;'> Aerosols are solid or liquid particles suspended in the atmosphere. They are generally very tiny for naked hunam eye but are mighty when it comes to the Earth radiation budget. They not only scatter and absorb the incoming solar and outgoing terrestrial radiation (direct forcing) but also act as condensation nuclei forming clouds and thereby effecting the radiation budget (indirect forcing). The vertical distribution of aerosols highly impacts the transport of (shortwave and longwave) radiation through the atmosphere as well as the formation of clouds and precipitation patterns. It also reflects aerosol lifetime (higher up aerosols indicating a longer lifetime). Thus when it comes to the assessment of climate relevant parameters such as the anthropogenic aerosol radiative forcing, which is among the highest uncertainties in our climate models, the vertical distribtuion of aerosols plays a crucial role. Therefore, it is imortant for the aerosol models to correctly simulate the vertical distribution of aerosols.</p> \n",
+    "<p style='text-align: justify;'> Aerosols are solid or liquid particles suspended in the atmosphere. They are generally very tiny for naked human eye but are mighty when it comes to the Earth radiation budget. They not only scatter and absorb the incoming solar and outgoing terrestrial radiation (direct forcing) but also act as condensation nuclei forming clouds and thereby effecting the radiation budget (indirect forcing) (Myhre et al., 2014). The vertical distribution of aerosols highly impacts the transport of (shortwave and longwave) radiation through the atmosphere as well as the formation of clouds and precipitation patterns (Mishra et al., 2015). It also reflects aerosol lifetime (higher up aerosols indicating a longer lifetime). Thus when it comes to the assessment of climate relevant parameters such as the anthropogenic aerosol radiative forcing, which is among the highest uncertainties in our climate models (Boucher et al., 2013), the vertical distribtuion of aerosols plays a crucial role. Therefore, it is imortant for the aerosol models to correctly simulate the vertical distribution of aerosols.</p> \n",
     "\n",
-    "<p style='text-align: justify;'> CALIOP (Cloud-Aerosol Lidar with Orthogonal Polarization) is a spaceborne lidar on board CALIPSO (Cloud-Aerosol Lidar and Infrared Pathfinder Satellite Observation) satellite which measures the aerosol extinction profiles in high spatial resolution. This data can be used to evaluate aerosol (climate) models. The model considered for the evaluation are the Geophysical Fluid Dynamics Laboratory (GFDL) and Spectral Radiation-Transport Model for Aerosol Species (SPRINTARS) from the AeroCom 2019 project. The mean aerosol extinction height diagnostic ($Z_\\alpha$) is commonly used as a prognostic variable to assess model performance with respect to the vertical distribution of aerosols (koffi et al., 2012; 2016). It is defined by the formula </p>\n",
+    "<p style='text-align: justify;'> CALIOP (Cloud-Aerosol Lidar with Orthogonal Polarization) is a spaceborne lidar on board CALIPSO (Cloud-Aerosol Lidar and Infrared Pathfinder Satellite Observation) satellite which measures the aerosol extinction profiles in high spatial resolution. In this report, the CALIOP retrievals are used to evaluate the aerosol (climate) models from the AeroCom 2019 project. The models considered for the evaluation are the Geophysical Fluid Dynamics Laboratory (GFDL) and Spectral Radiation-Transport Model for Aerosol Species (SPRINTARS). The mean aerosol extinction height diagnostic ($Z_\\alpha$) is used in this work as a prognostic variable to assess model performance with respect to the vertical distribution of aerosols (koffi et al., 2012; 2016). It is defined by the formula </p>\n",
     "\n",
     "\\begin{equation*}\n",
     "Z_\\alpha =\\frac{\\sum_{i=0}^n \\beta_i * Z_i}{\\sum_{i=0}^n \\beta_i} \\tag{1}\n",
@@ -59,7 +61,7 @@
     "\n",
     "<p style='text-align: justify;'> Where, $\\beta_i$ and $Z_i$ are the aerosol extinction coefficient (in $km^{-1}$) and altitude at level 𝑖 respectively. In this work, the $Z_\\alpha$ [$eq^n(1)$] is computed for altitudes up to 10 km for annual and seasonal scales. </p> \n",
     "\n",
-    "<p style='text-align: justify;'> This report is organised in to four sections. The first section gives a short introduction about the motivation and the objectives of this work, followed by the second section describing the data and the methodology used. The third section shows the result including the codes used in this work. The last section gives a brief conclusion based on the results.</p>"
+    "<p style='text-align: justify;'> This report is organised in four sections. The first section gives a short introduction about the motivation and the objectives of this work, followed by the second section describing the data and the methodology used. The third section shows the result including the codes used in this work. The last section gives a brief conclusion based on the results.</p>"
    ]
   },
   {
@@ -148,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font size = '5;' >  <b>3. Results  </b> </font>"
+    " <font size = '5;' >  <b>3. Results and Discussion  </b> </font>"
    ]
   },
   {
@@ -176,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='text-align: justify;'>The annual mean extinction profiles are computed in this section for CALIOP and model data. Before averaging, the data is cropped for latitudes greater than $70^o$N and for altitudes smaller than 10 kilometers as mentioned in the section-2. Moreover, the normalised extinction profiles and the annual mean extinction height $Z_\\alpha$ [from $eq^n(1)$] are also shown in this section.</p>  "
+    "<p style='text-align: justify;'>The annual mean extinction profiles are computed in this section for CALIOP and model data. Before averaging, the data is cropped for latitudes greater than $70^o$N and for altitudes smaller than 10 kilometers as mentioned in the Section 2. Moreover, the normalised extinction profiles and the annual mean extinction height $Z_\\alpha$ [from $eq^n(1)$] are also shown in this section.</p>  "
    ]
   },
   {
@@ -265,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='text-align: justify;'>The figure 1 shows the absolute and normalised aerosol extinction profiles for CALIOP and model data averaged over the year 2010 and the Arctic region. It can be seen that both the models overestimate the annual mean aerosol extinction profile for most part of the atmosphere with the MIROC-SPLINTARS model performing better than the GFDL model. Generally, the model parameters starting from the grid resolution to the parametrisations used to approximate the physical processes vary from one model to the other. So it is better to check if the models are able to simulate the vertical variations rather than the magnitude only. To do so, the extinction coefficients are normalised to one and are shown in the right hand side of the figure 1. It can be seen that the models are quite accurate in simulating the vertical variation of extinction coefficient in the lower atmosphere below 1 km. However, for atlitudes above 2 kms, both the models fail miserably. The seasonal profiles are presented in the next section.</p> "
+    "<p style='text-align: justify;'>The figure 1 shows the absolute and normalised aerosol extinction profiles for CALIOP and model data averaged over the year 2010 and the Arctic region. It can be seen that both the models overestimate the absolute value of annual mean aerosol extinction profile for most part of the atmosphere with the MIROC-SPLINTARS model performing better than the GFDL model. Generally, the model parameters starting from the grid resolution to the parametrizations used to approximate the physical processes, vary from one model to the other. So it is better to check if the models are able to simulate the vertical variations rather than the magnitude only. To do so, the extinction coefficients are normalised to one and are shown in the right hand side of the figure 1. It can be seen that the models are quite accurate in simulating the vertical variation of extinction coefficient in the lower atmosphere below 1 km. However, for atlitudes above 2 kms, both the models fail miserably. The seasonal profiles are presented in the next section.</p> "
    ]
   },
   {
@@ -279,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='text-align: justify;'>The seasonal mean extinction profiles are computed in this section for CALIOP and model data. The standard seasons such as Dec-Jan-Feb, Mar-Apr-May, Jun-July-Aug and Sept-Oct-Nov are considered for this study. The rest of the calculations are similar to the one described in the section 3.1.1 with the procedure being repeated for all the seasons.</p>  "
+    "<p style='text-align: justify;'>The seasonal mean extinction profiles are computed in this section for CALIOP and model data. The standard seasons such as Dec-Jan-Feb, Mar-Apr-May, Jun-July-Aug and Sept-Oct-Nov are considered for this study. The rest of the calculations are similar to the one described in the Section 3.1.1 with the procedure being repeated for all the seasons.</p>  "
    ]
   },
   {
@@ -404,7 +406,7 @@
     "id=[0,1,2,3]\n",
     "plt.rcParams.update({'font.size': 12})\n",
     "\n",
-    "# Plot the mean extinction height (already estimated in section 3.1.2) \n",
+    "# Plot the mean extinction height (already estimated in Section 3.1.2) \n",
     "ax.plot(id,ZZ[0,:],label='CALIOP satellite data')\n",
     "ax.plot(id,ZZ[1,:],label='GFDL-AM4-met2010_AP3-CTRL')\n",
     "ax.plot(id,ZZ[2,:],label='MIROC-SPRINTARS_AP3-CTRL')\n",
@@ -415,14 +417,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Figure 3:</b> CALIOP and modelled mean extinction height (in km) for different seasons over the Arctic"
+    "<b>Figure 3:</b> CALIOP and modeled mean extinction height (in km) for different seasons over the Arctic"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style='text-align: justify;'>The mean extinction height is comparatively less in D-J-F and S-O-N months in both the models and observations. This may occur because the aerosols tend to acumulate in the lower troposphere close to the surface because of stable atmospheric conditions and comparatively less surface fluxes (low boundary layer height). The models overestimate the mean extinction height in all the season. However, the GFDL model is capable of simulating the seasonal variation of mean extinction height. MIROC-SPLINTARS performs relatively better in simulating the magnitude of seasonal mean extinction height. The following table represents the modelled and observed mean extinction height over the Arctic. The MIROC-SPLINTARS is also relatively better in simulating the annual mean extinction height.</p> "
+    "<p style='text-align: justify;'>As seen in the figure 3, the mean extinction height is comparatively less in D-J-F and S-O-N months in both the models and observations. This may occur because the aerosols tend to acumulate in the lower troposphere close to the surface due to stable atmospheric conditions and comparatively less surface fluxes (low boundary layer height). The models overestimate the mean extinction height in all the season. However, the GFDL model is capable of simulating the seasonal variation of mean extinction height. MIROC-SPLINTARS performs relatively better in simulating the magnitude of seasonal mean extinction height. The following table represents the modeled and observed mean extinction height over the Arctic. The MIROC-SPLINTARS is also relatively better in simulating the annual mean extinction height.</p> "
    ]
   },
   {
@@ -469,9 +471,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Boucher, O., D. Randall, P. Artaxo, C. Bretherton, G. Feingold, P. Forster, V.-M. Kerminen, Y. Kondo, H. Liao, U. Lohmann, P. Rasch, S.K. Satheesh, S. Sherwood, B. Stevens and X.Y. Zhang, 2013: Clouds and Aerosols. In: Climate Change 2013: The Physical Science Basis. Contribution of Working Group I to the Fifth Assessment Report of the Intergovernmental Panel on Climate Change [Stocker, T.F., D. Qin, G.-K. Plattner, M. Tignor, S.K. Allen, J. Boschung, A. Nauels, Y. Xia, V. Bex and P.M. Midgley (eds.)]. Cambridge University Press, Cambridge, United Kingdom and New York, NY, USA.\n",
+    "\n",
     "Koffi, B., Schulz, M., Bréon, F.M., Dentener, F., Steensen, B.M., Griesfeller, J., Winker, D., Balkanski, Y., Bauer, S.E., Bellouin, N. and Berntsen, T., 2016. Evaluation of the aerosol vertical distribution in global aerosol models through comparison against CALIOP measurements: AeroCom phase II results. Journal of Geophysical Research: Atmospheres, 121(12), pp.7254-7283.\n",
     "\n",
-    "Koffi, B., Schulz, M., Bréon, F.M., Griesfeller, J., Winker, D., Balkanski, Y., Bauer, S., Berntsen, T., Chin, M., Collins, W.D. and Dentener, F., 2012. Application of the CALIOP layer product to evaluate the vertical distribution of aerosols estimated by global models: AeroCom phase I results. Journal of Geophysical Research: Atmospheres, 117(D10)."
+    "Koffi, B., Schulz, M., Bréon, F.M., Griesfeller, J., Winker, D., Balkanski, Y., Bauer, S., Berntsen, T., Chin, M., Collins, W.D. and Dentener, F., 2012. Application of the CALIOP layer product to evaluate the vertical distribution of aerosols estimated by global models: AeroCom phase I results. Journal of Geophysical Research: Atmospheres, 117(D10).\n",
+    "\n",
+    "Mishra, A.K., Koren, I. and Rudich, Y., 2015. Effect of aerosol vertical distribution on aerosol-radiation interaction: A theoretical prospect. Heliyon, 1(2), p.e00036.\n",
+    "\n",
+    "Myhre, G., Shindell, D. and Pongratz, J., 2014. Anthropogenic and natural radiative forcing."
    ]
   },
   {
