--- a/content/training/Example_compute_concentrations/create_concoa.ipynb
+++ b/content/training/Example_compute_concentrations/create_concoa.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -406,9 +406,7 @@
      "output_type": "stream",
      "text": [
       "CESM2-WACCM: Loading tas\n",
-      "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/CESM2-WACCM/r1i1p1f1/tas_Amon_CESM2-WACCM_historical_r1i1p1f1_gn_185001-201412.nc']\n",
-      "CESM2-WACCM: Loading ps\n",
-      "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/CESM2-WACCM/r1i1p1f1/ps_Amon_CESM2-WACCM_historical_r1i1p1f1_gn_185001-201412.nc']\n"
+      "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/CESM2-WACCM/r1i1p1f1/tas_Amon_CESM2-WACCM_historical_r1i1p1f1_gn_185001-201412.nc']\n"
      ]
     },
     {
@@ -416,7 +414,21 @@
      "output_type": "stream",
      "text": [
       "/opt/conda/lib/python3.7/site-packages/xarray/conventions.py:494: SerializationWarning: variable 'tas' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  use_cftime=use_cftime,\n",
+      "  use_cftime=use_cftime,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CESM2-WACCM: Loading ps\n",
+      "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/CESM2-WACCM/r1i1p1f1/ps_AERmon_CESM2-WACCM_historical_r1i1p1f1_gn_185001-201412.nc']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/opt/conda/lib/python3.7/site-packages/xarray/conventions.py:494: SerializationWarning: variable 'ps' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
       "  use_cftime=use_cftime,\n"
      ]
@@ -426,7 +438,21 @@
      "output_type": "stream",
      "text": [
       "CESM2-WACCM: Loading mmroa\n",
-      "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/CESM2-WACCM/r1i1p1f1/mmroa_AERmon_CESM2-WACCM_historical_r1i1p1f1_gn_185001-201412.nc']\n",
+      "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/CESM2-WACCM/r1i1p1f1/mmroa_AERmon_CESM2-WACCM_historical_r1i1p1f1_gn_185001-201412.nc']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/xarray/conventions.py:494: SerializationWarning: variable 'mmroa' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
+      "  use_cftime=use_cftime,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "NorESM2-LM: Loading tas\n",
       "['/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/NorESM2-LM/r1i1p1f1/tas_Amon_NorESM2-LM_historical_r1i1p1f1_gn_198001-198912.nc', '/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/NorESM2-LM/r1i1p1f1/tas_Amon_NorESM2-LM_historical_r1i1p1f1_gn_199001-199912.nc', '/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/NorESM2-LM/r1i1p1f1/tas_Amon_NorESM2-LM_historical_r1i1p1f1_gn_200001-200912.nc', '/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/NorESM2-LM/r1i1p1f1/tas_Amon_NorESM2-LM_historical_r1i1p1f1_gn_201001-201412.nc']\n"
      ]
@@ -503,21 +529,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xarray as xr\n",
     "#tas_path = '/home/notebook/shared-cmip6-for-ns1000k/historical/NorESM2-LM/r1i1p1f1/tas_Amon_NorESM2-LM_historical_r1i1p1f1_gn_201001-201412.nc'\n",
-    "def convert_mmroa_to_concoa_surface(ds_mmroa, ds_tas, ds_ps):\n",
+    "def convert_mmroa_to_concoa_surface(ds_mmr, ds_tas, ds_ps, name='oa'):\n",
+    "    \"\"\"\n",
+    "    ds_mmr : mmr dataset\n",
+    "    ds_tas : surface temperature ds\n",
+    "    ds_ps  : surface pressure dataset\n",
+    "    name   : constituent name (e.g. oa, so4, etc)\n",
+    "    return : dataset with variable conc<name> in units of ug m-3\n",
+    "    \"\"\"\n",
+    "    conc_name = 'conc'+name\n",
+    "    mmroa = 'mmr'+name\n",
     "    R = 287.058\n",
     "    kg2ug = 1e3*1e6\n",
-    "    ds_mmroa['rho_a'] = ds_ps['ps']/(R*ds_tas['tas'])\n",
-    "    ds_mmroa[concoa] = ds_mmroa[mmroa]*ds_mmroa['rho_a']*kg2ug\n",
-    "    ds_mmroa[concoa].attrs['units']='ug m-3'\n",
-    "    return ds_mmroa\n",
-    "def convert_mmroa2concoa_surf_and_save(ds_mmroa, ds_tas, ds_ps, savepath):\n",
-    "    ds = convert_mmroa_to_concoa_surface(ds_mmroa, ds_tas, ds_ps)\n",
+    "    ds_mmr['rho_a'] = ds_ps['ps']/(R*ds_tas['tas'])\n",
+    "    ds_mmr[conc_name] = ds_mmr[mmroa]*ds_mmr['rho_a']*kg2ug\n",
+    "    ds_mmr[conc_name].attrs['units']='ug m-3'\n",
+    "    return ds_mmr\n",
+    "def convert_mmroa2concoa_surf_and_save(ds_mmr, ds_tas, ds_ps, savepath, name='oa'):\n",
+    "    ds = convert_mmroa_to_concoa_surface(ds_mmr, ds_tas, ds_ps, name=name)\n",
     "    make_folders.make_folders(savepath)\n",
     "    ds.to_netcdf(savepath)\n",
     "    ds.close()\n"
@@ -525,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -558,8 +593,106 @@
     "    ds_ps =  xr.open_dataset(path)\n",
     "    savepath = savedir_concoa + read_CMIP.calc_filen(model, concoa, s_y, e_y, experiment)\n",
     "    make_folders.make_folders(savepath)\n",
-    "    convert_mmroa2concoa_surf_and_save(ds_mmroa, ds_tas, ds_ps, savepath)\n",
+    "    convert_mmroa2concoa_surf_and_save(ds_mmroa, ds_tas, ds_ps, savepath, name='oa')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'lev' (lev: 85)>\n",
+       "array([2.000000e+01, 5.333334e+01, 1.000000e+02, 1.600000e+02, 2.333333e+02,\n",
+       "       3.200000e+02, 4.200000e+02, 5.333334e+02, 6.599999e+02, 7.999999e+02,\n",
+       "       9.533337e+02, 1.120000e+03, 1.300000e+03, 1.493333e+03, 1.700000e+03,\n",
+       "       1.920000e+03, 2.153333e+03, 2.400000e+03, 2.659999e+03, 2.933333e+03,\n",
+       "       3.220000e+03, 3.520000e+03, 3.833333e+03, 4.160000e+03, 4.500000e+03,\n",
+       "       4.853333e+03, 5.220000e+03, 5.600000e+03, 5.993333e+03, 6.400000e+03,\n",
+       "       6.820000e+03, 7.253333e+03, 7.700000e+03, 8.160001e+03, 8.633340e+03,\n",
+       "       9.120007e+03, 9.620020e+03, 1.013337e+04, 1.066008e+04, 1.120016e+04,\n",
+       "       1.175364e+04, 1.232055e+04, 1.290093e+04, 1.349488e+04, 1.410248e+04,\n",
+       "       1.472388e+04, 1.535924e+04, 1.600882e+04, 1.667290e+04, 1.735190e+04,\n",
+       "       1.804629e+04, 1.875670e+04, 1.948389e+04, 2.022878e+04, 2.099253e+04,\n",
+       "       2.177651e+04, 2.258239e+04, 2.341216e+04, 2.426818e+04, 2.515322e+04,\n",
+       "       2.607059e+04, 2.702411e+04, 2.801826e+04, 2.905823e+04, 3.015002e+04,\n",
+       "       3.130054e+04, 3.251771e+04, 3.381059e+04, 3.518952e+04, 3.666624e+04,\n",
+       "       3.825403e+04, 3.996793e+04, 4.182485e+04, 4.384383e+04, 4.604621e+04,\n",
+       "       4.845583e+04, 5.109935e+04, 5.400643e+04, 5.721002e+04, 6.074670e+04,\n",
+       "       6.465696e+04, 6.898552e+04, 7.378177e+04, 7.910002e+04, 8.500000e+04])\n",
+       "Coordinates:\n",
+       "  * lev      (lev) float64 20.0 53.33 100.0 160.0 ... 7.378e+04 7.91e+04 8.5e+04\n",
+       "Attributes:\n",
+       "    bounds:         lev_bnds\n",
+       "    units:          m\n",
+       "    axis:           Z\n",
+       "    positive:       up\n",
+       "    long_name:      hybrid height coordinate\n",
+       "    standard_name:  atmosphere_hybrid_height_coordinate\n",
+       "    formula:        z = a + b*orog\n",
+       "    formula_terms:  a: lev b: b orog: orog"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = xr.open_dataset('/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/UKESM1-0-LL/r1i1p1f2/mmrbc_AERmon_UKESM1-0-LL_historical_r1i1p1f2_gn_185001-189912.nc')\n",
+    "a['lev']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray 'lev' (lev: 85)>\n",
+       "array([2.000000e+01, 5.333334e+01, 1.000000e+02, 1.600000e+02, 2.333333e+02,\n",
+       "       3.200000e+02, 4.200000e+02, 5.333334e+02, 6.599999e+02, 7.999999e+02,\n",
+       "       9.533337e+02, 1.120000e+03, 1.300000e+03, 1.493333e+03, 1.700000e+03,\n",
+       "       1.920000e+03, 2.153333e+03, 2.400000e+03, 2.659999e+03, 2.933333e+03,\n",
+       "       3.220000e+03, 3.520000e+03, 3.833333e+03, 4.160000e+03, 4.500000e+03,\n",
+       "       4.853333e+03, 5.220000e+03, 5.600000e+03, 5.993333e+03, 6.400000e+03,\n",
+       "       6.820000e+03, 7.253333e+03, 7.700000e+03, 8.160001e+03, 8.633340e+03,\n",
+       "       9.120007e+03, 9.620020e+03, 1.013337e+04, 1.066008e+04, 1.120016e+04,\n",
+       "       1.175364e+04, 1.232055e+04, 1.290093e+04, 1.349488e+04, 1.410248e+04,\n",
+       "       1.472388e+04, 1.535924e+04, 1.600882e+04, 1.667290e+04, 1.735190e+04,\n",
+       "       1.804629e+04, 1.875670e+04, 1.948389e+04, 2.022878e+04, 2.099253e+04,\n",
+       "       2.177651e+04, 2.258239e+04, 2.341216e+04, 2.426818e+04, 2.515322e+04,\n",
+       "       2.607059e+04, 2.702411e+04, 2.801826e+04, 2.905823e+04, 3.015002e+04,\n",
+       "       3.130054e+04, 3.251771e+04, 3.381059e+04, 3.518952e+04, 3.666624e+04,\n",
+       "       3.825403e+04, 3.996793e+04, 4.182485e+04, 4.384383e+04, 4.604621e+04,\n",
+       "       4.845583e+04, 5.109935e+04, 5.400643e+04, 5.721002e+04, 6.074670e+04,\n",
+       "       6.465696e+04, 6.898552e+04, 7.378177e+04, 7.910002e+04, 8.500000e+04])\n",
+       "Coordinates:\n",
+       "  * lev      (lev) float64 20.0 53.33 100.0 160.0 ... 7.378e+04 7.91e+04 8.5e+04\n",
+       "Attributes:\n",
+       "    bounds:         lev_bnds\n",
+       "    units:          m\n",
+       "    axis:           Z\n",
+       "    positive:       up\n",
+       "    long_name:      hybrid height coordinate\n",
+       "    standard_name:  atmosphere_hybrid_height_coordinate\n",
+       "    formula:        z = a + b*orog\n",
+       "    formula_terms:  a: lev b: b orog: orog"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = xr.open_dataset('/home/ab9880f9-2d7bc8-2d48c2-2d9223-2d693c1d3cf3c1/shared-cmip6-for-ns1000k/historical/UKESM1-0-LL/r1i1p1f2/')\n",
+    "a['lev']"
    ]
   }
  ],
